@@ -1906,3 +1906,70 @@ PANOPTICON_ACTIONSUMMARYTASKS_LBL_PERIOD_HELP="Choose which time period the repo
 PANOPTICON_ACTIONSUMMARYTASKS_LBL_PERIOD_DAILY="Daily"
 PANOPTICON_ACTIONSUMMARYTASKS_LBL_PERIOD_WEEKLY="Weekly"
 PANOPTICON_ACTIONSUMMARYTASKS_LBL_PERIOD_MONTHLY="Monthly"
+
+[TinyMCE]
+PANOPTICON_TINYMCE_LANG_AR = "Arabic"
+PANOPTICON_TINYMCE_LANG_AR_SA = "Arabic, Saudi Arabia"
+PANOPTICON_TINYMCE_LANG_AZ = "Azerbaijani"
+PANOPTICON_TINYMCE_LANG_BE = "Belarusian"
+PANOPTICON_TINYMCE_LANG_BG_BG = "Bulgarian"
+PANOPTICON_TINYMCE_LANG_BN_BD = "Bengali"
+PANOPTICON_TINYMCE_LANG_CA = "Catalan"
+PANOPTICON_TINYMCE_LANG_CS = "Czech"
+PANOPTICON_TINYMCE_LANG_CY = "Welsh"
+PANOPTICON_TINYMCE_LANG_DA = "Danish"
+PANOPTICON_TINYMCE_LANG_DE = "German"
+PANOPTICON_TINYMCE_LANG_EL = "Greek"
+PANOPTICON_TINYMCE_LANG_EO = "Esperanto"
+PANOPTICON_TINYMCE_LANG_ES = "Spanish (Spain)"
+PANOPTICON_TINYMCE_LANG_ES_MX = "Spanish (Mexico)"
+PANOPTICON_TINYMCE_LANG_ET = "Estonian"
+PANOPTICON_TINYMCE_LANG_EU = "Basque"
+PANOPTICON_TINYMCE_LANG_FA = "Persian"
+PANOPTICON_TINYMCE_LANG_FI = "Finnish"
+PANOPTICON_TINYMCE_LANG_FR_FR = "French (France)"
+PANOPTICON_TINYMCE_LANG_GA = "Irish"
+PANOPTICON_TINYMCE_LANG_GL = "Galician"
+PANOPTICON_TINYMCE_LANG_HE_IL = "Hebrew (Israel)"
+PANOPTICON_TINYMCE_LANG_HR = "Croatian"
+PANOPTICON_TINYMCE_LANG_HU_HU = "Hungarian (Hungary)"
+PANOPTICON_TINYMCE_LANG_HY = "Armenian"
+PANOPTICON_TINYMCE_LANG_ID = "Indonesian"
+PANOPTICON_TINYMCE_LANG_IS_IS = "Icelandic"
+PANOPTICON_TINYMCE_LANG_IT = "Italian"
+PANOPTICON_TINYMCE_LANG_JA = "Japanese"
+PANOPTICON_TINYMCE_LANG_KA_GE = "Georgian"
+PANOPTICON_TINYMCE_LANG_KAB = "Kabyle"
+PANOPTICON_TINYMCE_LANG_KK = "Kazakh"
+PANOPTICON_TINYMCE_LANG_KO_KR = "Korean (Korea)"
+PANOPTICON_TINYMCE_LANG_KU = "Kurdish"
+PANOPTICON_TINYMCE_LANG_LT = "Lithuanina"
+PANOPTICON_TINYMCE_LANG_LV = "Latvian"
+PANOPTICON_TINYMCE_LANG_NB_NO = "Norwegian Bokmål (Norway)"
+PANOPTICON_TINYMCE_LANG_NE = "Nepali"
+PANOPTICON_TINYMCE_LANG_NL = "Dutch"
+PANOPTICON_TINYMCE_LANG_NL_BE = "Butch (Belgium)"
+PANOPTICON_TINYMCE_LANG_OC = "Occitan"
+PANOPTICON_TINYMCE_LANG_PL = "Polish"
+PANOPTICON_TINYMCE_LANG_PT_BR = "Portuguese (Brazil)"
+PANOPTICON_TINYMCE_LANG_PT_PT = "Portuguese (Portugal)"
+PANOPTICON_TINYMCE_LANG_RO = "Romanian"
+PANOPTICON_TINYMCE_LANG_RU = "Russian"
+PANOPTICON_TINYMCE_LANG_SK = "Slovak"
+PANOPTICON_TINYMCE_LANG_SL_SI = "Slovenian (Slovenia)"
+PANOPTICON_TINYMCE_LANG_SQ = "Albanina"
+PANOPTICON_TINYMCE_LANG_SR = "Serbian (Cyrillic)"
+PANOPTICON_TINYMCE_LANG_SV_SE = "Swedish (Sweden)"
+PANOPTICON_TINYMCE_LANG_TA = "Tamil"
+PANOPTICON_TINYMCE_LANG_TG = "Tajik"
+PANOPTICON_TINYMCE_LANG_TH_TH = "Thai (Thailand)"
+PANOPTICON_TINYMCE_LANG_TR = "Turkish"
+PANOPTICON_TINYMCE_LANG_UG = "Uyghur"
+PANOPTICON_TINYMCE_LANG_UK = "Ukrainian"
+PANOPTICON_TINYMCE_LANG_UZ = "Uzbek"
+PANOPTICON_TINYMCE_LANG_VI = "Vietnamese"
+PANOPTICON_TINYMCE_LANG_ZH_CN = "Chinese Simplified (China)"
+PANOPTICON_TINYMCE_LANG_ZH_HK = "Chinese Traditional (Hong Kong)"
+PANOPTICON_TINYMCE_LANG_ZH_MO = "Chinese Traditional (Macau)"
+PANOPTICON_TINYMCE_LANG_ZH_SG = "Chinese Traditional (Singapore)"
+PANOPTICON_TINYMCE_LANG_ZH_TW = "Chinese Traditional (Taiwan)"
