@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.1.4
 ================================================================================
 + Translatable dates
++ Load TinyMCE translations
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
 # [LOW] Wrong language in mail Blade templates [gh-658]
 
